--- a/syllabus.tex
+++ b/syllabus.tex
@@ -167,7 +167,7 @@ This is a partial list of various interesting and useful books that will be touc
 \begin{itemize}
 \item Joshua Angrist and J\"orn-Steffen Pischke, {\textit{Mostly Harmless Econometrics}}
 \item Scott Cunningham, {\textit{Causal Inference: The Mixtape}},  \url{https://mixtape.scunning.com/}
-\item Benjamin T. Miller and Peter M. Aronow, {\textit{Foundations of Agnostic Statistics}}
+\item Peter M. Aronow and Benjamin T. Miller, {\textit{Foundations of Agnostic Statistics}}
 \item Kieran Healy, {\textit{Data Visualization: A Practical Introduction}}, \url{https://socviz.co/}
 \end{itemize} 
 
@@ -183,7 +183,7 @@ ECON 550, ECON 551
   \begin{enumerate}
   \item Potential Outcomes and Directed Acyclic Graphs
     \begin{itemize}
-    \item Chapter 7, Miller and Aronow
+    \item Chapter 7, Aronow and Miller 
     \item Chapter 3, Cunningham
     \item ``Structural vs. Reduced Form'' Language, Confusion and Models in Empirical Economics, Haile \url{http://www.econ.yale.edu/~pah29/intro.pdf} (or on course website)
     \item ``Statistics and Causal Inference'', Holland 1986
@@ -196,7 +196,8 @@ ECON 550, ECON 551
       Learning about Development'' Deaton (2010)
     \item ``Better LATE Than Nothing: Some Comments on Deaton (2009) and Heckman and Urzua (2009)'' Imbens (2010)
     \item ``Building Bridges between Structural and Program Evaluation Approaches to Evaluating Policy''
-    \item ``Clustering, Spatial Correlations, and Randomization Inference'', Barrios, Diamond, Imbens and Kolesar (2012)
+    \item ``Let's take the Con out of Econometrics'', Leamer (1983)
+    \item ``The Credibility Revolution in Empirical Economics: How Better Research Design is Taking the Con out of Econometrics'', Angrist and Pischke (2010)      
     \end{itemize}
   \item Propensity Scores
     \begin{itemize}
@@ -206,8 +207,9 @@ ECON 550, ECON 551
     \item ``Efficient Estimation of Average Treatment Effects Using the Estimated Propensity Score'', Hirano, Imbens and Rider (2003)
     \item ``Propensity Score-Matching Methods for Nonexperimental Causal Studies'', Dehijia and Wahba (2002)
     \item ``Does matching overcome LaLonde's critique of nonexperimental estimators?'', Smith and Todd (2005)
+    \item ``Practical propensity score matching: a reply to Smith and Todd'', Dehijia (2005)
     \item ``Nonparametric Estimation of Average Treatment Effects Under Exogeneity: A Review'', Imbens (2004)
-    \item ``Why Propensity Scores Should Not Be Used for Matching.'' King and Nielsen (2019)
+%    \item ``Why Propensity Scores Should Not Be Used for Matching.'' King and Nielsen (2019)
     \end{itemize}
   \item Interference, Spillovers and Dynamics
     \begin{itemize}
@@ -247,9 +249,18 @@ ECON 550, ECON 551
     \end{itemize}
   \item Regularized linear regression
     \begin{itemize}
+    \item ``Regression shrinkage and selection via the lasso'' Tibshiriani (1996)
+    \item ``The adaptive lasso and its oracle properties'', Zou (2006)
+    \item ``Sparse estimators and the oracle property, or the return of Hodges' estimator'' Leeb and Potscher (2008)
+    \item ``Preconditioning the lasso for sign consistency'' Jia and Rohe (2015)
+    \item ``Machine learning: an applied econometric approach'' Mullainathan and Spiess (2017)
+    \item ``Double/debiased/neyman machine learning of treatment effects'' Chernozhukov et al. (2017)
+    \item ``Double/debiased machine learning for treatment and structural parameters'' Chernozhukov et al. (2018)
+    \item ``Generic machine learning inference on heterogenous treatment effects in randomized experiments'' Chernozhukov et al. (2020)      
     \item ``High-Dimensional Methods and Inference on Structural and Treatment Effects'', Belloni, Chernozhukov  and Hansen (2014)
+    \item ``Inference on treatment effects after selection among high-dimensional controls'' Belloni, Chernozhukov  and Hansen (2014)
     \item ``On model selection consistency of Lasso'' Zhao and Yu (2006)
-    \item ``Valid Post-Selection Inference in High-Dimensional Approximately Sparse Quantile Regression Models'' Belloni, Chernozhukov and Kato (2018)
+    \item  ``Omitted variable bias of Lasso-based inference methods: A finite sample analysis'' Wuthrich and Zhu (2020)
     \end{itemize}
   \end{enumerate}
 \item \underline{Maximum Likelihood, Bayesian Methods, Generalized Method of Moments, and Minimum Distance}
