--- a/lectures/9_discrete_choice_1.tex
+++ b/lectures/9_discrete_choice_1.tex
@@ -145,7 +145,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Likelihood Methods: Binary Discrete Choice and Computational Methods}}
+\title[]{\textcolor{blue}{Likelihood Methods: Binary Discrete Choice, GLM and Computational Methods}}
 \author[PGP]{}
 \institute[FRBNY]{\small{Paul Goldsmith-Pinkham}}
 \date{\today}
@@ -179,7 +179,7 @@
 \end{frame}
 
 
-\begin{frame}{Today's topic: minimizing objection functions and two applications }
+\begin{frame}{Today's topic: minimizing objection functions and an application }
   \begin{columns}[T] % align columns
     \begin{column}{.6\textwidth}
       \begin{wideitemize}
